# ndtech-protos

./: BUILD.bazel  README.md  bazel-bin  bazel-ndtech-protos  bazel-out  bazel-testlogs  go.mod  main.go
entities/: BUILD.bazel  entities.proto
